# MAE

./: .appveyor.yml  .codedocs  .gitignore  .gitignore.orig  .travis.yml  Dockerfile  MAE-Build.txt  README.md  appveyor.yml  mae.doxy  mae.json  mae.json.orig  mainpage.dox  setup.sh
evaluation/mae_similarity_evaluator/: .gitignore  CMakeLists.txt  mae_similarity_evaluator  mae_similarity_evaluator-0.1.0  sqlite_comparators.sql  sqlite_data.sql  sqlite_indices.sql  sqlite_sequences.sql
evaluation/mae_similarity_evaluator/src/: comparators.hpp  convenience.hpp  database.hpp  file.hpp  mae_similarity_evaluator.cpp
libmae/: .cproject  .directory  .gitignore  .project  AUTHORS  CMakeLists.maecsharp.in  CMakeLists.txt  CMakeLists.txt.orig  ILabanSequenceRecognitionListener.java.cmakein  ILabanSequenceSequenceListener.java.cmakein  IPoseListener.java.cmakein  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  build.gradle.cmakein  config.status  configure  configure.ac  configure.in  copy_headers.sh  copy_headers.sh~  libmae.doxy  libmae.la  libmae.pc  libmae.pc.cmakein  libmae.pc.in  libmae.so.0  libmaejava.jnilib.0  libmaejava.jnilib.0.10.0  libtool  maeConfig.cmakein  metrics.html  metrics.xml  prepare_autotools.sh  prepare_autotools.sh~  prepare_build.sh  readme  (+1 more)
libmae/.libs/: libmae.la  libmae.lai
libmae/Debug/: makefile  objects.mk  sources.mk
libmae/Release/: makefile  objects.mk  sources.mk
libmae/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
libmae/build_test/: test_bvh_controller  test_internal_math
libmae/cccc_metrics/: metrics.sh~
libmae/cccc_metrics/result/: cccc.db  cccc.html  cccc.xml  cccc_src.html
libmae/doc/schemas/: rewriting_rule.xsd
libmae/doxygen/html/: accent__sign_8hpp_source.html  angular__joint_8hpp_source.html  angular__skeleton_8hpp_source.html  angular__skeleton__controller_8hpp_source.html  annotated.html  area__part_8hpp_source.html  basis_8hpp_source.html  body__part_8hpp_source.html  bone_8hpp_source.html  bvh__controller_8hpp_source.html  bvh__data_8hpp_source.html  bvh__spec_8hpp_source.html  cancellation__symbol_8hpp_source.html  classes.html  classmae_1_1bone-members.html  classmae_1_1bone.html  classmae_1_1demo_1_1fl_1_1res_1_1dummy__pose__listener-members.html  classmae_1_1demo_1_1fl_1_1res_1_1dummy__pose__listener.html  classmae_1_1e__bone__c-members.html  classmae_1_1e__bone__c.html  classmae_1_1e__joint__c-members.html  classmae_1_1e__joint__c.html  classmae_1_1e__kinect__joint__c-members.html  classmae_1_1e__kinect__joint__c.html  classmae_1_1fl_1_1angular__joint-members.html  classmae_1_1fl_1_1angular__joint.html  classmae_1_1fl_1_1angular__skeleton-members.html  classmae_1_1fl_1_1angular__skeleton.html  classmae_1_1fl_1_1angular__skeleton__controller-members.html  classmae_1_1fl_1_1angular__skeleton__controller.html  classmae_1_1fl_1_1bvh__controller-members.html  classmae_1_1fl_1_1bvh__controller.html  classmae_1_1fl_1_1bvh__data-members.html  classmae_1_1fl_1_1bvh__data.html  classmae_1_1fl_1_1bvh__spec-members.html  classmae_1_1fl_1_1bvh__spec.html  classmae_1_1fl_1_1e__fl__direction__c-members.html  classmae_1_1fl_1_1e__fl__direction__c.html  classmae_1_1fl_1_1e__fl__joint__c-members.html  classmae_1_1fl_1_1e__fl__joint__c.html  (+366 more)
libmae/doxygen/latex/: annotated.tex  classmae_1_1bone.tex  classmae_1_1demo_1_1fl_1_1res_1_1dummy__pose__listener.eps  classmae_1_1demo_1_1fl_1_1res_1_1dummy__pose__listener.tex  classmae_1_1e__bone__c.tex  classmae_1_1e__joint__c.tex  classmae_1_1e__kinect__joint__c.tex  classmae_1_1fl_1_1angular__joint.tex  classmae_1_1fl_1_1angular__skeleton.tex  classmae_1_1fl_1_1angular__skeleton__controller.eps  classmae_1_1fl_1_1angular__skeleton__controller.tex  classmae_1_1fl_1_1bvh__controller.tex  classmae_1_1fl_1_1bvh__data.tex  classmae_1_1fl_1_1bvh__spec.tex  classmae_1_1fl_1_1e__fl__direction__c.tex  (+156 more)
libmae/html/: index.html
libmae/include/: Makefile  Makefile.am  Makefile.in
libmae/include/mae/: mae.hpp  (+23 more)
libmae/latex/: refman.tex
libmae/src/: indexer_fix.hpp  makefile.am
libmae_demo/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.orig  CPack.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  copy_headers.sh  libmae_demo.doxyfile  libmae_demo.la  libmae_demo.pc  libmae_demo.pc.in  libtool  mae_demoConfig.cmakein  prepare_autotools.sh  prepare_autotools.sh~
libmae_demo/.libs/: libmae_demo.la  libmae_demo.lai  libmae_demo.so.0.0.1
libmae_demo/Debug/: makefile
libmae_demo/Release/: makefile  objects.mk  sources.mk
libmae_demo/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
libmae_demo/cccc_metrics/: metrics.sh
libmae_demo/include/: Makefile  Makefile.am  Makefile.in
libmae_eventing/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.orig  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac  libmae_eventing.la  libmae_eventing.pc  libmae_eventing.pc.cmakein  libmae_eventing.pc.in  libtool  mae_eventingConfig.cmakein  prepare_autotools.sh  prepare_autotools.sh~  prepare_build.sh
libmae_eventing/.libs/: libmae_eventing.la  libmae_eventing.lai  libmae_eventing.so.0  libmae_eventing.so.0.0.1
libmae_eventing/Debug/: makefile  sources.mk
libmae_eventing/Release/: makefile  objects.mk  sources.mk
libmae_eventing/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
libmae_eventing/include/: Makefile  Makefile.am  Makefile.in
samples/laban-sequence-converter/: .cproject  .gitignore  .project  CMakeLists.txt  README  laban-sequence-converter  laban-sequence-converter-0.1.0
samples/minimal-libmae/: .cproject  .gitignore  .project  CMakeLists.txt  README
samples/minimal-libmae-csharp/: .gitignore  CMakeLists.txt
samples/minimal-libmae_demo/: .cproject  .gitignore  .project  CMakeLists.txt  README
samples/minimal-libmae_nite/: .cproject  .gitignore  .project  CMakeLists.txt
samples/tutorial-listeners/: .gitignore  CMakeLists.txt  README
(+6989 files in other folders)
