AC_INIT([libmae], 0.9.0)

AM_INIT_AUTOMAKE([subdir-objects])
#AM_INIT_AUTOMAKE
#AUTOMAKE_OPTIONS = subdir-objects

# Use .cpp as default extension if no _SOURCES have been defined
#AM_DEFAULT_SOURCE_EXT = .cpp

#required packages
PKG_CHECK_MODULES(OPENCV, opencv >= 2.4.8)
AC_SUBST(OPENCV_CFLAGS)
AC_SUBST(OPENCV_LIBS)

#PKG_CHECK_MODULES([LIBXMLXX], [libxml++-2.6])
PKG_CHECK_MODULES(LIBXMLXX, libxml++-2.6 >= 2.6)
AC_SUBST(LIBXMLXX_CFLAGS)
AC_SUBST(LIBXMLXX_LIBS)

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_CXX

#c++11 setup
AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])

#JNI setup
AX_JNI_INCLUDE_DIR
for JNI_INCLUDE_DIR in $JNI_INCLUDE_DIRS
do
  CPPFLAGS="$CPPFLAGS -I$JNI_INCLUDE_DIR"
	echo $JNI_INCLUDE_DIR
done



LT_INIT

AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIR([m4])
AC_OUTPUT
